Small code modifications

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<button v-cloak v-if="noErrors" @click="formSubmit" type="submit" class="btn btn-primary">Submit</button>
 				</form>
 				<div class="errors" v-if="!noErrors">
-					<section v-cloak v-if="email" class="email-errors">
+					<section v-cloak v-if="email" class="email-errors" v-cloak>
 						<span class="warning" :class="{valid: emailObj.emailSuccess}">{{emailObj.emailText}}</span>	
 					</section>
 					<section class="password-errors" v-if="password" v-cloak>
